Implement persistent chat history

--- a/message-history.ipynb
+++ b/message-history.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,20 +66,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"Hi Mark! It's nice to meet you. How's it going today?\""
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "config = {\n",
     "    \"configurable\": {\n",
@@ -97,20 +86,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Your name is Mark! As an AI chatbot, I deduced that from the first message you sent me.'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "response = with_message_history.invoke(\n",
     "    [HumanMessage(\"What's my name?\")],\n",
@@ -122,40 +100,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'a2b3c': InMemoryChatMessageHistory(messages=[HumanMessage(content=\"Hi! I'm Mark.\"), AIMessage(content=\"Hi Mark! It's nice to meet you. How's it going today?\", additional_kwargs={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': '37eef3a3-c569-4606-9c40-d36ea7a195ad', 'token_count': {'input_tokens': 72, 'output_tokens': 16}}, response_metadata={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': '37eef3a3-c569-4606-9c40-d36ea7a195ad', 'token_count': {'input_tokens': 72, 'output_tokens': 16}}, id='run-8110dc72-f8c3-4d67-8bdf-3e79428b8e9d-0'), HumanMessage(content=\"What's my name?\"), AIMessage(content='Your name is Mark! As an AI chatbot, I deduced that from the first message you sent me.', additional_kwargs={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': '63cc7bf1-cf12-4523-9e64-c3e219534c0c', 'token_count': {'input_tokens': 99, 'output_tokens': 22}}, response_metadata={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': '63cc7bf1-cf12-4523-9e64-c3e219534c0c', 'token_count': {'input_tokens': 99, 'output_tokens': 22}}, id='run-e476d3c9-6abe-44e8-aabc-544ebf7255b3-0')])}"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "store"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Your name is Sofia. Is there anything else I can help you with?'"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "response = with_message_history.invoke(\n",
     "    [HumanMessage(\"What's my name?\")],\n",
@@ -166,21 +122,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'a2b3c': InMemoryChatMessageHistory(messages=[HumanMessage(content=\"Hi! I'm Mark.\"), AIMessage(content=\"Hi Mark! It's nice to meet you. How's it going today?\", additional_kwargs={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': '37eef3a3-c569-4606-9c40-d36ea7a195ad', 'token_count': {'input_tokens': 72, 'output_tokens': 16}}, response_metadata={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': '37eef3a3-c569-4606-9c40-d36ea7a195ad', 'token_count': {'input_tokens': 72, 'output_tokens': 16}}, id='run-8110dc72-f8c3-4d67-8bdf-3e79428b8e9d-0'), HumanMessage(content=\"What's my name?\"), AIMessage(content='Your name is Mark! As an AI chatbot, I deduced that from the first message you sent me.', additional_kwargs={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': '63cc7bf1-cf12-4523-9e64-c3e219534c0c', 'token_count': {'input_tokens': 99, 'output_tokens': 22}}, response_metadata={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': '63cc7bf1-cf12-4523-9e64-c3e219534c0c', 'token_count': {'input_tokens': 99, 'output_tokens': 22}}, id='run-e476d3c9-6abe-44e8-aabc-544ebf7255b3-0')]),\n",
-       " 'e2f3g': InMemoryChatMessageHistory(messages=[HumanMessage(content=\"What's my name?\"), AIMessage(content=\"I'm sorry, but as an AI chatbot, I don't know your name. If you don't mind, you can share it with me, and I would be delighted to address you by your name.\", additional_kwargs={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': 'b854bc43-73a2-4a0e-b80d-798de60e929f', 'token_count': {'input_tokens': 71, 'output_tokens': 42}}, response_metadata={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': 'b854bc43-73a2-4a0e-b80d-798de60e929f', 'token_count': {'input_tokens': 71, 'output_tokens': 42}}, id='run-6146bdd0-9001-4870-997f-a52edb064b4c-0'), HumanMessage(content=\"What's my name?\"), AIMessage(content='Your name is Sofia. Is there anything else I can help you with?', additional_kwargs={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': '6ee70ffa-782f-4b7f-8ed0-ed5df06101e4', 'token_count': {'input_tokens': 124, 'output_tokens': 15}}, response_metadata={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': '6ee70ffa-782f-4b7f-8ed0-ed5df06101e4', 'token_count': {'input_tokens': 124, 'output_tokens': 15}}, id='run-91666f27-0299-431f-9389-5656d1079066-0')])}"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "store"
    ]
@@ -193,123 +137,169 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 30,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import json\n",
-    "from langchain.schema import messages_to_dict, messages_from_dict\n",
-    "\n",
-    "test_obj = {\"test\": \"dictionary\"}\n",
-    "session_id = \"abcd\"\n",
-    "# json.dump(test_obj, open(f\"{session_id}.txt\", \"r\"))"
+    "## Session factory"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'type': 'human', 'data': {'content': 'Hello! I am Mark.', 'additional_kwargs': {}, 'response_metadata': {}, 'type': 'human', 'name': None, 'id': None, 'example': False}}, {'type': 'ai', 'data': {'content': 'Hi Mark!', 'additional_kwargs': {}, 'response_metadata': {}, 'type': 'ai', 'name': None, 'id': None, 'example': False, 'tool_calls': [], 'invalid_tool_calls': [], 'usage_metadata': None}}]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "langchain_core.messages.human.HumanMessage"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "message_history = [\n",
-    "    HumanMessage(\"Hello! I am Mark.\"),\n",
-    "    AIMessage(\"Hi Mark!\"),\n",
-    "]\n",
-    "message_history = InMemoryChatMessageHistory(messages=message_history)\n",
-    "\n",
-    "temp_dict = messages_to_dict(message_history.messages)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
+    "from pathlib import Path\n",
+    "import re\n",
+    "from typing import Callable, Union\n",
+    "from langchain_community.chat_message_histories import FileChatMessageHistory\n",
+    "from langchain_core.chat_history import BaseChatMessageHistory\n",
     "\n",
-    "current_sessions = {}\n",
     "\n",
-    "def get_session_history(session_id: str) -> BaseChatMessageHistory:\n",
-    "    if session_id not in current_sessions:\n",
-    "        try:\n",
-    "            with open(f\"{session_id}.txt\", \"r\") as f:\n",
-    "                current_sessions.update(\n",
-    "                    messages_from_dict(json.loads(f))\n",
-    "                )\n",
-    "        except:\n",
-    "            current_sessions[session_id] = InMemoryChatMessageHistory()\n",
-    "            with open(f\"{session_id}.txt\", \"w\") as f:\n",
-    "                json.dump({}, f)\n",
-    "    else:\n",
-    "        with open(f\"{session_id}.txt\", \"w\") as f:\n",
-    "            json.dump(\n",
-    "                messages_to_dict(current_sessions[session_id].messages),\n",
-    "                f,\n",
+    "def _is_valid_identifier(value: str) -> bool:\n",
+    "    \"\"\"Check if the value is a valid identifier.\"\"\"\n",
+    "    # Use a regular expression to match the allowed characters\n",
+    "    valid_characters = re.compile(r\"^[a-zA-Z0-9-_]+$\")\n",
+    "    return bool(valid_characters.match(value))\n",
+    "\n",
+    "def create_session_factory(\n",
+    "    base_dir: Union[str, Path],\n",
+    ") -> Callable[[str], BaseChatMessageHistory]:\n",
+    "    \"\"\"Create a factory that can retrieve chat histories.\n",
+    "\n",
+    "    The chat histories are keyed by user ID and conversation ID.\n",
+    "\n",
+    "    Args:\n",
+    "        base_dir: Base directory to use for storing the chat histories.\n",
+    "\n",
+    "    Returns:\n",
+    "        A factory that can retrieve chat histories keyed by user ID and conversation ID.\n",
+    "    \"\"\"\n",
+    "    base_dir_ = Path(base_dir) if isinstance(base_dir, str) else base_dir\n",
+    "    if not base_dir_.exists():\n",
+    "        base_dir_.mkdir(parents=True)\n",
+    "\n",
+    "    def get_chat_history(user_id: str, conversation_id: str) -> FileChatMessageHistory:\n",
+    "        \"\"\"Get a chat history from a user id and conversation id.\"\"\"\n",
+    "        if not _is_valid_identifier(user_id):\n",
+    "            raise ValueError(\n",
+    "                f\"User ID {user_id} is not in a valid format. \"\n",
+    "                \"User ID must only contain alphanumeric characters, \"\n",
+    "                \"hyphens, and underscores.\"\n",
+    "                \"Please include a valid cookie in the request headers called 'user-id'.\"\n",
     "            )\n",
-    "    return current_sessions[session_id]"
+    "        if not _is_valid_identifier(conversation_id):\n",
+    "            raise ValueError(\n",
+    "                f\"Conversation ID {conversation_id} is not in a valid format. \"\n",
+    "                \"Conversation ID must only contain alphanumeric characters, \"\n",
+    "                \"hyphens, and underscores. Please provide a valid conversation id \"\n",
+    "                \"via config. For example, \"\n",
+    "                \"chain.invoke(.., {'configurable': {'conversation_id': '123'}})\"\n",
+    "            )\n",
+    "\n",
+    "        user_dir = base_dir_ / user_id\n",
+    "        if not user_dir.exists():\n",
+    "            user_dir.mkdir(parents=True)\n",
+    "        file_path = user_dir / f\"{conversation_id}.json\"\n",
+    "        return FileChatMessageHistory(str(file_path))\n",
+    "\n",
+    "    return get_chat_history"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import TypedDict\n",
+    "\n",
+    "\n",
+    "class InputChat(TypedDict):\n",
+    "    \"\"\"Input for the chat endpoint.\"\"\"\n",
+    "    human_input: str\n",
+    "    \"\"\"Human input\"\"\"\n",
+    "    history: list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.runnables import ConfigurableFieldSpec\n",
+    "from langchain_core.output_parsers import StrOutputParser\n",
+    "from langchain_core.runnables.history import RunnableWithMessageHistory\n",
+    "from langchain_core.prompts import ChatPromptTemplate, MessagesPlaceholder\n",
+    "\n",
+    "prompt = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\"system\", \"You're an assistant by the name of Bob.\"),\n",
+    "        MessagesPlaceholder(variable_name=\"history\"),\n",
+    "        (\"human\", \"{human_input}\"),\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "chain = prompt | model | StrOutputParser()\n",
+    "\n",
+    "chain_with_history = RunnableWithMessageHistory(\n",
+    "    chain,\n",
+    "    create_session_factory(\"chat_histories\"),\n",
+    "    input_messages_key=\"human_input\",\n",
+    "    history_messages_key=\"history\",\n",
+    "    history_factory_config=[\n",
+    "        ConfigurableFieldSpec(\n",
+    "            id=\"user_id\",\n",
+    "            annotation=str,\n",
+    "            name=\"User ID\",\n",
+    "            description=\"Unique identifier for the user.\",\n",
+    "            default=\"\",\n",
+    "            is_shared=True,\n",
+    "        ),\n",
+    "        ConfigurableFieldSpec(\n",
+    "            id=\"conversation_id\",\n",
+    "            annotation=str,\n",
+    "            name=\"Conversation ID\",\n",
+    "            description=\"Unique identifier for the conversation.\",\n",
+    "            default=\"\",\n",
+    "            is_shared=True,\n",
+    "        ),\n",
+    "    ],\n",
+    ").with_types(input_type=InputChat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "config = {\n",
-    "    \"configurable\": {\n",
-    "        \"session_id\": \"a2b3c\",\n",
-    "    },\n",
+    "    \"user_id\": \"mark\",\n",
+    "    \"conversation_id\": \"abc\",\n",
     "}\n",
     "\n",
-    "with_persistent_history = RunnableWithMessageHistory(model, get_session_history)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def talk(text: str):\n",
-    "    response = with_persistent_history.invoke(\n",
-    "        [HumanMessage(text)],\n",
+    "    response = chain_with_history.invoke(\n",
+    "        input=InputChat(human_input=text),\n",
     "        config=config\n",
     "    )\n",
-    "    return response.content"
+    "    return response"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Hi Mark! It's nice to meet you. How's it going today?\""
+       "\"Hi Mark! It's nice to meet you. How are you doing today?\""
       ]
      },
-     "execution_count": 60,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,16 +310,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"I'm doing well, thank you for asking! I'm having a great day so far and I'm happy to be of assistance to you. As an AI chatbot, I don't have any days, but I'm always ready to help and chat!\""
+       "\"I'm doing well, thank you for asking! I'm having a great day so far and I'm happy to be of assistance to you. As an AI chatbot, my role is to offer helpful and thorough responses to your queries, so please feel free to ask me anything you'd like. How's your week been so far?\""
       ]
      },
-     "execution_count": 61,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,45 +330,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"The opposite of 'top' could be 'bottom'. The words are often used to describe relative positions, with one being at the highest point and the other at the lowest point. \\n\\nAnother opposite could be the word 'worst', as the top is usually associated with the best or highest quality, while the worst indicates the lowest or poor quality.\""
+       "'The opposite of \"top\" would be \"bottom.\" They are opposites in the sense of position or direction. While \"top\" refers to the uppermost part or highest point, \"bottom\" represents the lowest position or the base. \\n\\nThe words \"top\" and \"bottom\" are often used to describe the spatial relationships of objects or to indicate relative positions in three-dimensional space.'"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "talk(\"What's the opposite of top?\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello, my name's Mark\n",
-      "Hi Mark! It's nice to meet you. How's it going today?\n",
-      "Good! Thanks for asking. Wbu?\n",
-      "I'm doing well, thank you for asking! I'm having a great day so far and I'm happy to be of assistance to you. As an AI chatbot, I don't have any days, but I'm always ready to help and chat!\n"
-     ]
-    }
-   ],
-   "source": [
-    "with open(\"a2b3c.txt\", \"r\") as f:\n",
-    "    messages = messages_from_dict(json.load(f))\n",
-    "for m in messages:\n",
-    "    print(m.content)"
    ]
   }
  ],
